syntax = "proto3";
option java_multiple_files = true;
package db.fennec.proto;

option java_outer_classname = "FennecProto";

message FResultProto {
    repeated FDataEntryProto data = 1;
}

message FDataBucketProto {
    repeated FDataProto data = 1;
}

message FDataEntryProto {
    string field = 1;
    string namespace = 2;
    FDataProto data = 3;
}

message FDataProto {
    double value = 1;
    int64 timestamp = 2;
}

message FMetaOldProto {
    repeated FMetaLabelProto used_label = 1;
    int64 time_per_bucket = 2;
}

message FMetaLabelProto {
    string label = 1;
    int64 timestamp = 2;
}

message FNamespacesProto {
    repeated string ns = 1;
}

message FMetaProto {
    repeated int64 used_label_suffix = 1;
    string field = 2;
    int64 time_per_bucket = 3;
}
